# sledge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  deny.toml  flake.nix  taplo.toml
.github/workflows/: ci.yml
docs/: architecture.md  config-schema.md  macos-permissions.md
packaging/macos/: Info.plist.template  com.braden.sledge.plist.template
scripts/: bundle-macos.sh  install-launchagent.sh  setup-signing-identity.sh
