[workspace]
members = [
    "packages/core",
    "packages/config",
    "packages/config/models",
    "packages/macos",
    "packages/linux",
    "packages/windows",
    "packages/cli",
]
resolver = "2"

[workspace.package]
authors    = ["Braden Steffaniak"]
edition    = "2024"
license    = "MPL-2.0"
repository = "https://github.com/BSteffaniak/sledge"
version    = "0.0.1-alpha.0"

[workspace.dependencies]
# Internal
sledge               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli" }
sledge_config        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config" }
sledge_config_models = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config/models" }
sledge_core          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/core" }
sledge_linux         = { version = "0.0.1-alpha.0", default-features = false, path = "packages/linux" }
sledge_macos         = { version = "0.0.1-alpha.0", default-features = false, path = "packages/macos" }
sledge_windows       = { version = "0.0.1-alpha.0", default-features = false, path = "packages/windows" }

# Core
anyhow = { version = "1", default-features = false, features = ["std"] }
bitflags = { version = "2", default-features = false }
crossbeam-channel = { version = "0.5", default-features = false, features = [
    "std",
] }
once_cell = { version = "1", default-features = false, features = ["std"] }
parking_lot = { version = "0.12", default-features = false }
thiserror = { version = "2", default-features = false }

# CLI / config
clap = { version = "4", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
    "color",
    "suggestions",
] }
dirs = { version = "6", default-features = false }
serde = { version = "1", default-features = false, features = [
    "std",
    "derive",
] }
serde_json = { version = "1", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false, features = [
    "parse",
    "display",
] }

# Logging
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-appender = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "env-filter",
    "fmt",
    "ansi",
    "registry",
] }

# Async runtime (IPC / signals only; hot path stays sync)
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
    "sync",
    "io-util",
    "fs",
    "time",
] }
tokio-util = { version = "0.7", default-features = false }

# Syscalls / signals
libc = { version = "0.2", default-features = false }
signal-hook = { version = "0.3", default-features = false, features = [
    "iterator",
] }

# File watching (for config auto-reload)
notify = { version = "6", default-features = false, features = [
    "macos_fsevent",
] }

# macOS FFI
core-foundation = { version = "0.10", default-features = false }
core-foundation-sys = { version = "0.8", default-features = false }
core-graphics = { version = "0.24", default-features = false }
foreign-types = { version = "0.5.0", default-features = false }
objc2 = { version = "0.5", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.2", default-features = false, features = [
    "std",
    "NSWorkspace",
    "NSRunningApplication",
] }
objc2-foundation = { version = "0.2", default-features = false, features = [
    "std",
    "NSString",
    "NSNotification",
    "NSDictionary",
    "NSArray",
    "NSValue",
    "NSOperation",
    "NSThread",
] }

# Dev
insta    = { version = "1", default-features = false, features = ["yaml"] }
proptest = { version = "1", default-features = false, features = ["std"] }
tempfile = { version = "3", default-features = false }

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow-overrides (higher priority wins over the group warns above).
cargo_common_metadata        = "allow"
collapsible_if               = "allow"
doc_markdown                 = "allow"
if_not_else                  = "allow"
implicit_hasher              = "allow"
manual_let_else              = "allow"
map_unwrap_or                = "allow"
missing_errors_doc           = "allow"
missing_panics_doc           = "allow"
module_name_repetitions      = "allow"
multiple_crate_versions      = "allow"
must_use_candidate           = "allow"
needless_bool_assign         = "allow"
needless_pass_by_value       = "allow"
option_if_let_else           = "allow"
single_match                 = "allow"
single_match_else            = "allow"
too_long_first_doc_paragraph = "allow"
too_many_lines               = "allow"
# Reasonable for low-level FFI / hot-path code
cast_lossless                      = "allow"
cast_possible_truncation           = "allow"
cast_possible_wrap                 = "allow"
cast_sign_loss                     = "allow"
fn_params_excessive_bools          = "allow"
future_not_send                    = "allow"
ignored_unit_patterns              = "allow"
items_after_statements             = "allow"
match_same_arms                    = "allow"
missing_const_for_fn               = "allow"
needless_for_each                  = "allow"
option_option                      = "allow"
or_fun_call                        = "allow"
redundant_closure_for_method_calls = "allow"
redundant_pub_crate                = "allow"
same_functions_in_if_condition     = "allow"
significant_drop_in_scrutinee      = "allow"
significant_drop_tightening        = "allow"
similar_names                      = "allow"
struct_excessive_bools             = "allow"
trivially_copy_pass_by_ref         = "allow"
unnecessary_wraps                  = "allow"
unreadable_literal                 = "allow"
unused_async                       = "allow"
unused_self                        = "allow"
use_self                           = "allow"
used_underscore_binding            = "allow"
wildcard_imports                   = "allow"
# This happens a lot with tracing macros; keep the noise down.
uninlined_format_args = "allow"
# Nursery churn that's noisy without clear benefit.
missing_fields_in_debug = "allow"
option_as_ref_cloned    = "allow"
# Often a readability trade-off; allow the clone.
redundant_clone = "allow"
